--- a/docs/spork/common.tex
+++ b/docs/spork/common.tex
@@ -15,6 +15,8 @@
 \usepackage[usenames,dvipsnames,svgnames,table,hyperref]{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{fontspec}
+\usepackage{tikz}
+\usetikzlibrary{shapes.geometric, arrows, positioning, calc}
 
 \setsansfont{FreeSans}
 \setmonofont{Ubuntu Mono}
